adjust portfolio box size, based on media width, to prevent text cutoff

--- a/css/style.css
+++ b/css/style.css
@@ -661,8 +661,8 @@ pre code {
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
 .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm,
-.col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
-.col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
+.col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-6-portfolio, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
+.col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-4-portfolio, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
 .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
 .col-xl-auto {
   position: relative;
@@ -960,6 +960,10 @@ pre code {
     flex: 0 0 100%;
     max-width: 100%;
   }
+  .bg-border-primary {
+    border:5px solid #0BCEAF;
+    height: 300px;
+  }
   .order-sm-first {
     order: -1;
   }
@@ -1098,10 +1102,16 @@ pre code {
     flex: 0 0 41.66667%;
     max-width: 41.66667%;
   }
+
   .col-md-6 {
     flex: 0 0 0 33.33%;
     max-width: 33.33%;
   }
+  .col-md-6-portfolio {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+
   .col-md-7 {
     flex: 0 0 58.33333%;
     max-width: 58.33333%;
@@ -1125,6 +1135,10 @@ pre code {
   .col-md-12 {
     flex: 0 0 100%;
     max-width: 100%;
+  }
+  .bg-border-primary {
+    border:5px solid #0BCEAF;
+    height: 325px;
   }
   .order-md-first {
     order: -1;
@@ -1260,12 +1274,16 @@ pre code {
     flex: 0 0 33.33333%;
     max-width: 33.33333%;
   }
+  .col-lg-4-portfolio {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+  }
   .col-lg-5 {
     flex: 0 0 41.66667%;
     max-width: 41.66667%;
   }
   .col-lg-6 {
-    flex: 0 90%;
+    flex: 0 0 90%;
     max-width: 90%;
   }
   .col-lg-7 {
@@ -1291,6 +1309,10 @@ pre code {
   .col-lg-12 {
     flex: 0 0 100%;
     max-width: 100%;
+  }
+  .bg-border-primary {
+    border:5px solid #0BCEAF;
+    height: 375px;
   }
   .order-lg-first {
     order: -1;
@@ -1457,6 +1479,10 @@ pre code {
   .col-xl-12 {
     flex: 0 0 100%;
     max-width: 100%;
+  }
+  .bg-border-primary {
+    border:5px solid #0BCEAF;
+    height: 325px;
   }
   .order-xl-first {
     order: -1;
@@ -6418,18 +6444,14 @@ a.close.disabled {
   background-color: #0BCEAF !important;
 }
 
-.bg-border-primary {
-  border:5px solid #0BCEAF;
-  height: 300px;
-}
-
 .project-header-text {
   text-align: center;
   color: #0BCEAF
 }
 
 .project-text {
-  padding-left: 10px;
+  padding-left: 7.5px;
+  padding-right: 7.5px;
 }
 
 .project-icon {
@@ -9871,7 +9893,7 @@ h6,
   display: none;
   width: 30px;
   text-align: center;
-  right: 30px;
+  right: 30px; 
   bottom: 30px;
   z-index: 11;
   animation: action 1s infinite alternate;
